--- a/package.json
+++ b/package.json
@@ -1,31 +1,42 @@
 {
   "name": "fluxnote",
   "version": "0.0.1",
+  "scripts": {
+    "test": "jest"
+  },
   "dependencies": {
     "flux": "^2.0.1",
     "underscore": "^1.7.0"
   },
   "devDependencies": {
     "gulp": "~3.8.8",
-    "gulp-load-plugins": "~0.6.0",
-    "gulp-util": "~3.0.1",
     "gulp-autoprefixer": "~1.0.0",
-    "gulp-jshint": "~1.8.4",
-    "gulp-rimraf": "~0.1.0",
     "gulp-bower": "0.0.6",
-    "gulp-size": "~1.1.0",
-    "gulp-connect-multi": "~1.0.8",
-    "gulp-useref": "~1.0.1",
     "gulp-browserify": "~0.5.0",
+    "gulp-connect-multi": "~1.0.8",
+    "gulp-jshint": "~1.8.4",
+    "gulp-load-plugins": "~0.6.0",
+    "gulp-rimraf": "~0.1.0",
+    "gulp-size": "~1.1.0",
     "gulp-uglify": "1.0.1",
+    "gulp-useref": "~1.0.1",
+    "gulp-util": "~3.0.1",
+    "jest-cli": "^0.4.0",
     "jshint-stylish": "0.4.0",
-    "wiredep": "~1.8.5",
-    "reactify": "~0.15.2",
     "react": "^0.12.0",
+    "react-router": "~0.11.6",
+    "react-tools": "^0.13.2",
+    "reactify": "~0.15.2",
     "reflux": "~0.1.13",
-    "react-router": "~0.11.6"
+    "wiredep": "~1.8.5"
   },
   "engines": {
     "node": ">=0.10.0"
+  },
+  "jest": {
+    "scriptPreprocessor": "<rootDir>/preprocessor.js",
+    "unmockedModulePathPatterns": [
+      "react"
+    ]
   }
 }
